--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-upload_port = /dev/ttyACM0
+upload_port = /dev/ttyACM1
+lib_deps =
+    Keypad
